# reprex

./: .gitignore  README.md
20230512T084359/: main.py
20230629T110916/: 1501.xlsx  README.md  datapackage.json  datapackage.yaml  main.py  requirements.txt
20230711T100325/: input.csv  main.py  output-petl.csv
20230713T220342/: main.py
20230718T183252/: datapackage.yaml  error_change_col_names.py  readme.md  requirements.txt  snippet_using_filter.py
20230718T183252/data/: 2281.csv  filtered_test_data.csv
20230718T183252/data-raw/: 2281.xlsx  test_data.xlsx
20230718T183252/schemas/: obz-dados.yaml
20231807T163531/: main.py  requirements.txt
20231807T163531/data-raw/: alteracoes-orcamentarias_2021.csv  alteracoes-orcamentarias_2021.xlsx  alteracoes-orcamentarias_2022.xlsx  alteracoes-orcamentarias_2023.xlsx  cota-item-data_2021.xlsx  execucao_2022-02.xlsx
20231807T163531/schemas/: alteracoes-orcamentarias.yaml  roperacional-datapackage.yaml
id/20230512T084359/: missing_date.csv  missing_date.xlsx  requirements.txt
id/20230629T110916/: 1501.csv  1501.xlsx  requirements.txt
id/20230711T100325/: output-frictionless.csv  resource.yaml
id/20230713T220342/: data.csv
id/20230718T183252/: dialect.yaml
id/20231807T163531/: main.py
reprex/20230512T084359/: datapackage.json
reprex/20230629T110916/: datapackage.json
reprex/20250823T080452/: datapackage.yaml  pyproject.toml
reprex/20250823T080452/data/: cpfs1.csv  cpfs2.csv  cpfs3.csv
reprex/20250908T080452/: pyproject.toml
reprex/20250908T080452/docs/: index.md  planilha-exemplo.xlsx
(+205 files in other folders)
